apps/books-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-service
  labels:
    app: books-api
  namespace: books-api-development
spec:
  selector:
    app: books-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
